<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>udp_receiver</name>
  <version>0.0.0</version>
  <description>The udpreceiver package</description>
  <maintainer email="haiyunzhang@utexas.edu">Haiyun Zhang</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- Dependencies for ROS 2 packages -->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend> 


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
